# fastphylo-py

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: example1.py  example2.py  example3.py  example4.py
src/cpp/: bindings.cpp
src/cpp/fastphylo/: DNA_b128_String.cpp  NeighborJoining.hpp  computeTAMURANEIDistance_DNA_b128_String.cpp  config.h  file_utils.cpp  file_utils.hpp  log_utils.hpp  sse2_wrapper.h  xml_output_global.cpp  xml_output_global.hpp
src/fastphylo/: __init__.py  _fastphylo.pyi  alignment.py  distances.py  io.py  protein.py  sequences.py  trees.py
tests/: conftest.py  test_alignment.py  test_distances.py  test_io.py  test_trees.py
tests/data/: dna_aligned.fasta  dna_aligned.phy  dna_aligned.sto  dna_unaligned.fasta  protein_aligned.fasta  protein_unaligned.fasta
validation/: Snakefile  config.yaml
validation/.snakemake/metadata/: c3VtbWFyeS9jb21wYXJpc29uX2RuYS5wZGY=  c3VtbWFyeS9jb21wYXJpc29uX3Byb3RlaW4ucGRm  c3VtbWFyeS9sbF9jaGVjay50c3Y=  c3VtbWFyeS9zdW1tYXJ5Lm1k  c3VtbWFyeS9zdW1tYXJ5LnBkZg==  c3VtbWFyeS9zdW1tYXJ5LnRzdg==  cGxvdHMvZG5hL2pjL2Vycm9yLnBkZg==  cGxvdHMvZG5hL2pjL3NjYXR0ZXIucGRm  cGxvdHMvZG5hL2sycC9lcnJvci5wZGY=  cGxvdHMvZG5hL2sycC9zY2F0dGVyLnBkZg==  cGxvdHMvZG5hL3RuOTMvZXJyb3IucGRm  cGxvdHMvZG5hL3RuOTMvc2NhdHRlci5wZGY=  cGxvdHMvcHJvdGVpbi9CTE9TVU02Mi9lcnJvci5wZGY=  cGxvdHMvcHJvdGVpbi9CTE9TVU02Mi9zY2F0dGVyLnBkZg==  cGxvdHMvcHJvdGVpbi9EQ01VVC9lcnJvci5wZGY=  cGxvdHMvcHJvdGVpbi9EQ01VVC9zY2F0dGVyLnBkZg==  cGxvdHMvcHJvdGVpbi9EYXlob2ZmL2Vycm9yLnBkZg==  cGxvdHMvcHJvdGVpbi9EYXlob2ZmL3NjYXR0ZXIucGRm  cGxvdHMvcHJvdGVpbi9ISVZ3L2Vycm9yLnBkZg==  cGxvdHMvcHJvdGVpbi9ISVZ3L3NjYXR0ZXIucGRm  cGxvdHMvcHJvdGVpbi9ISVZiL2Vycm9yLnBkZg==  cGxvdHMvcHJvdGVpbi9ISVZiL3NjYXR0ZXIucGRm  cGxvdHMvcHJvdGVpbi9KVFQvZXJyb3IucGRm  cGxvdHMvcHJvdGVpbi9KVFQvc2NhdHRlci5wZGY=  cGxvdHMvcHJvdGVpbi9KVFRfRENNdXQvZXJyb3IucGRm  cGxvdHMvcHJvdGVpbi9KVFRfRENNdXQvc2NhdHRlci5wZGY=  cGxvdHMvcHJvdGVpbi9MRy9lcnJvci5wZGY=  cGxvdHMvcHJvdGVpbi9MRy9zY2F0dGVyLnBkZg==  cGxvdHMvcHJvdGVpbi9NdFJFVi9lcnJvci5wZGY=  cGxvdHMvcHJvdGVpbi9NdFJFVi9zY2F0dGVyLnBkZg==  cGxvdHMvcHJvdGVpbi9QTUIvZXJyb3IucGRm  cGxvdHMvcHJvdGVpbi9QTUIvc2NhdHRlci5wZGY=  cGxvdHMvcHJvdGVpbi9SdFJFVi9lcnJvci5wZGY=  cGxvdHMvcHJvdGVpbi9SdFJFVi9zY2F0dGVyLnBkZg==  (+8540 more)
validation/scripts/: check_likelihood.py  count_nfev.py  estimate_distances.py  plot.py  plot_comparison.py  plot_npts_sensitivity.py  render_ml_vs_expected.py  render_summary.py  simulate.py  summarize.py  summarize_comparison.py  true_distances.py
